feat: make channel synchronization asynchronous
